fix alignment of author name

--- a/assets/sass/components/_author-bio.scss
+++ b/assets/sass/components/_author-bio.scss
@@ -34,8 +34,6 @@
 
 	&__name {
 		color: $hbc-black;
-		vertical-align: super;
-	    top: -2px;
 	    position: relative;
 	}
 	
